test_data/end_to_end/err__use_unknown_package_anchor/stderr.txt
error: can't resolve path: package `unknown` not found
  --> main.cz:1:13
1 | use package(unknown)::bar;
                ~~~~~~~
